refactor: jpg, jpeg 받지 못하는 오류 수정